fixed overlapping of the add icon

--- a/styles/_editorjs.scss
+++ b/styles/_editorjs.scss
@@ -3,6 +3,7 @@
 .codex-editor {
   &__redactor {
     padding-bottom: 0 !important;
+    margin-right: 4rem !important;
   }
 
   .ce-popover--opened {
